--- a/Portafolio/index.html
+++ b/Portafolio/index.html
@@ -165,13 +165,12 @@
 
                 <div class="box">
                     <div class="year_company">
-                        <h5>2018 - actualemte</h5>
+                        <h5>2018 - actualmente</h5>
                         <h5>Cooperativa Inversiones y Planes de la Paz</h5>
                     </div>
                     <div class="text">
                         <h4>Coordinador de Sistemas</h4>
                         <p style="text-align:justify">
-                            Funciones realizadas:
                             Funciones realizadas:
                             Conocimientos en instalación de nuevos software, ensamble de nuevos equipos, mantenimiento 
                             preventivo y predictivo que garantice el funcionamiento del hardware de los equipos, manejo 
@@ -193,6 +192,13 @@
                 </div>
 
                 <div class="box">
+                    <h4>Git Hub</h4>
+                    <div class="percent">
+                        <div style="width: 60%;"></div>
+                    </div>
+                </div>
+
+                <div class="box">
                     <h4>JavaScript</h4>
                     <div class="percent">
                         <div style="width: 30%;"></div>
@@ -203,13 +209,6 @@
                     <h4>Angular</h4>
                     <div class="percent">
                         <div style="width: 30%;"></div>
-                    </div>
-                </div>
-
-                <div class="box">
-                    <h4>Php - Laravel - Liveware</h4>
-                    <div class="percent">
-                        <div style="width: 25%;"></div>
                     </div>
                 </div>
 
@@ -248,6 +247,32 @@
                     </div>
                 </div>
             </div>
+            
+            <div class="about">
+                <h2 class="title2">Rerencias Familiares</h2>
+                <p style="text-align:justify">                     
+                    CARLOS WILLIAM ZULETA LARGI</br>
+                    AUX LOGISTICO</br>
+                    CCI Rodamientos</br>
+                    TEl: 322 8307722</br></br>                                              
+                </p>
+            </div>
+
+            <div class="about">
+                <h2 class="title2">Rerencias Personales</h2>
+                <p style="text-align:justify">                     
+                    PAOLA TATIANA ORTEGON YEPES</br>
+                    ECONOMISTA</br>
+                    Independiente</br>
+                    TEl: 314 6068947</br></br>
+                    
+                    FERNEY LEON ECHEVERRY</br>
+                    INGENIERO EN SISTEMAS</br>
+                    Independiente</br>
+                    TEl: 320 7767455</br></br>
+                </p>
+            </div>
+
         </div>
     </div>
 </body>
