--- a/Portafolio/index.html
+++ b/Portafolio/index.html
@@ -251,7 +251,7 @@
             <div class="about">
                 <h2 class="title2">Rerencias Familiares</h2>
                 <p style="text-align:justify">                     
-                    CARLOS WILLIAM ZULETA LARGI</br>
+                    CARLOS WILLIAM ZULETA LARGO</br>
                     AUX LOGISTICO</br>
                     CCI Rodamientos</br>
                     TEl: 322 8307722</br></br>                                              
