--- a/Portafolio/index.html
+++ b/Portafolio/index.html
@@ -120,7 +120,7 @@
                         <h5>Cempac SA</h5>
                     </div>
                     <div class="text">
-                        <h4>Tecnico en sistemas</h4>
+                        <h4>Tecnico en sistemas</h4><br>
                         <p style="text-align:justify">
                             Funciones realizadas:
                             Conocimientos en instalación de nuevos software, ensamble de nuevos equipos, mantenimiento 
@@ -138,7 +138,7 @@
                         <h5>Proveer Institucional SAS</h5>
                     </div>
                     <div class="text">
-                        <h4>Coordinador de Sistemas</h4>
+                        <h4>Coordinador de Sistemas</h4><br>
                         <p style="text-align:justify">
                             Funciones realizadas:
                             Conocimientos en instalación de nuevos software, mantenimiento preventivo y predictivo que 
@@ -156,7 +156,7 @@
                         <h5>Atento</h5>
                     </div>
                     <div class="text">
-                        <h4>Agente Call Center</h4>
+                        <h4>Agente Call Center</h4><br>
                         <p style="text-align:justify">
                             Fidelización a Clientes, Ventas de servicios fijos para hogar.<br>
                         </p>
@@ -165,17 +165,31 @@
 
                 <div class="box">
                     <div class="year_company">
-                        <h5>2018 - actualmente</h5>
-                        <h5>Cooperativa Inversiones y Planes de la Paz</h5>
+                        <h5>2018 - acte</h5>
+                        <h5>Inversiones y Planes de la Paz</h5>
                     </div>
                     <div class="text">
-                        <h4>Coordinador de Sistemas</h4>
+                        <h4>Coordinador de Sistemas</h4><br>
                         <p style="text-align:justify">
                             Funciones realizadas:
                             Conocimientos en instalación de nuevos software, ensamble de nuevos equipos, mantenimiento 
                             preventivo y predictivo que garantice el funcionamiento del hardware de los equipos, manejo 
                             de herramientas ofimáticas, implementación y configuración  de redes de datos según  normas 
                             técnicas internacionales <br>
+                        </p>
+                    </div>
+                </div>
+
+                <div class="box">
+                    <div class="year_company">
+                        <h5>2023</h5>
+                        <h5>Fundacion Desarrollo Social</h5>
+                    </div>
+                    <div class="text">
+                        <h4>Educador</h4><br>
+                        <p style="text-align:justify">
+                            Funciones realizadas:
+                            Proceso de cualificación del talento humano de manera presencia.<br>
                         </p>
                     </div>
                 </div>
